Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1435793: Bug in admin.php
 - Fixed bug 1420372: Cannot add event to public calendar
 - Fixed bug 1434525: rss.php shows some events twice
 - Fixed bug 1424599: too many events in rss feed
 - Fixed bug 1433366: no reminders sent for repeated events without an end date
 - Fixed bug 1418124: Ending of recurrence: Fields not editable
 - Fixed bug 1430285: edit an event & time wrong
 - Fixed bug 1430670: Undefined Index in functions.php
 - Fixed bug 1430755: Lunar phases mssing when display all days selected
 - Fixed bug 1430562: translation-file cannot be updated properly
 - Fixed bug 1427479: Repated overlapping event (=2 days) will not be displayed
 - Fixed bug 1340790: Return to proper view after edit or other action
 - Fixed bug 1409552: Weekly repeating event shifts days
 - Fixed bug 1424413: calling upcoming.php as include doesn't work after 02/03/06
 - Moved all common images into images folder
 - Added optional lunar phases to month.php
 - Fixed bug 1410156: Pop ups displaying incorrectly in IE6
 - Fixed bug 1427068: SMTP mail doesn't accept admin authorization settings
 - Fixed bug 1425311: saving system setting requires 2x clicks at the save-button
 - Fixed bug 1425316: Event who needs 2 days cannot be translated correctly
 - Fixed bug 1424190: SERVER_URL short if WC not top level folder
 - Fixed bug 1414017: public prefs choice gives "Redirection limit exceeded" error
 - Fixed bug 1413527: Public access not seeing unapproved events
 - Fixed bug 1403574: upcoming.php does not work with HTTP Auth
 - Implemented patch 1418938: Upcoming.php updated to run as include or command line
 - Fixed bug 1403574: upcoming.php does not work with HTTP Auth
 - Added time selections to menu bar
 - Added admin option to display All Timezones (approx 360)
 - Fixed bug 1413327: repeated events appear out of order in various pages
 - Fixed bug 1421389: user-app-: login-app opens wrong login file in _top.
 - New top menu bar added